==================
### 1.6.2
==================

Bug fixes:
- Fix deal bug: showing twice as many items added.
- Make "Compiles portals now?" prompt case-insensitive.

New features:
- Better support for detecting dead players.
- Show player number with emoticons and public chat.
- Show distance with emoticons.
- The uneq command now supports item names.
- You can now specify multiple plugin directories on the commandline.
  Each directory is seperated by a ';' (on Windows) or a ':' (on Unix).

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <merge list number>
  Merge the card into the item.


New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.

Credits:
- Damokles: case sensitivity fix, avoidGM_namePattern.
- denni: 'storage log' command.
- kunjandad: friend list packet support.
- Crypticode: 'ai on'/'ai off' commands; item name support in 'uneq'
  command.


==================
### 1.6.1
==================

*** INCOMPATIBLE CHANGES ***:
- teleportAuto_useSP is now obsolete my teleportAuto_useSkill.
- The _inInventory directive has changed. See below.

Bug fixes: